# ChangeLog for sys-libs/db
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/db/ChangeLog,v 1.320 2011/07/16 19:43:16 robbat2 Exp $

*db-5.2.28 (16 Jul 2011)

  16 Jul 2011; Robin H. Johnson <robbat2@gentoo.org> +db-5.2.28.ebuild,
  +files/db-5.2.28-sqlite-configure-path.patch:
  Version bump.

  15 Feb 2011; Matt Turner <mattst88@gentoo.org> db-4.8.30.ebuild:
  Added ~mips keyword.

*db-5.1.25 (08 Feb 2011)

  08 Feb 2011; Robin H. Johnson <robbat2@gentoo.org> +db-5.1.25.ebuild:
  Bug #353694: Version bump

  06 Feb 2011; Mart Raudsepp <leio@gentoo.org> db-1.85-r3.ebuild:
  Drop to ~mips

*db-5.0.32 (07 Jan 2011)

  07 Jan 2011; Robin H. Johnson <robbat2@gentoo.org> +db-5.0.32.ebuild:
  Bump 5.0 series as upstream backported the 5.1 fixes.

*db-5.1.19-r2 (18 Oct 2010)

  18 Oct 2010; Robin H. Johnson <robbat2@gentoo.org> -db-5.1.19-r1.ebuild,
  +db-5.1.19-r2.ebuild:
  Revbump for bug #341559 to fix naming of libdb_sql* on 5.1.

*db-5.1.19-r1 (17 Oct 2010)

  17 Oct 2010; Robin H. Johnson <robbat2@gentoo.org> -db-5.1.19.ebuild,
  +db-5.1.19-r1.ebuild:
  hardmasked 51 build had the wrong slot, fix it now.

*db-5.1.19 (08 Oct 2010)

  08 Oct 2010; Robin H. Johnson <robbat2@gentoo.org> +db-5.1.19.ebuild:
  Bug #339634: version bump. Package.masked.

*db-5.0.26 (04 Oct 2010)

  04 Oct 2010; Robin H. Johnson <robbat2@gentoo.org> +db-5.0.26.ebuild:
  Version bump.

  12 Sep 2010; Robin H. Johnson <robbat2@gentoo.org> -db-3.2.9-r11.ebuild,
  -db-4.2.52_p4-r2.ebuild, -db-4.3.29-r2.ebuild, -files/patch.3.2.9.1,
  -files/patch.3.2.9.2:
  Bug #160192: Trim old gnuconfig_update versions.

  01 Aug 2010; Markos Chandras <hwoarang@gentoo.org> db-4.8.30.ebuild:
  Stable on amd64 wrt bug #328609

  17 Jul 2010; Christian Faulhammer <fauli@gentoo.org> db-4.8.30.ebuild:
  stable x86, bug 328609

  02 Jun 2010; Torsten Veller <tove@gentoo.org> metadata.xml:
  Remove caleb from metadata.xml (#317071)
