@@ -45,6 +45,7 @@ DIST db-5.0.32.tar.gz 29325258 RMD160 82997d94a1d542b127cceae0356f484d2cc79d7a S
 DIST db-5.1.19.tar.gz 30698224 RMD160 cc08123ec9bade1d2aaf79d9119b7474634e7f40 SHA1 0c84ed9c6e16857ceb66193bedbb15b05ffbebd0 SHA256 0194d4ca9266ba1a1c0bfbc233b18bfd05f63163453c81ebcdfdc7112d5ac850
 DIST db-5.1.25.tar.gz 30804092 RMD160 f9da0d6f970ab2647c2fc20d63ca9f7fad0bbf23 SHA1 1a216821957ce910a269bf9916bf49aba0f08b4d SHA256 72eac5fcae4b51b0f1edc727c0368407f29b42e3f2f50ebc31a282d0d6c0a617
 DIST db-5.2.28.tar.gz 33033536 RMD160 b54918e88cfea6584dbe2e4994aa16ec24f04a83 SHA1 e6572e3356cf8bc998da4e889db3b12638833435 SHA256 92133e3a5b4bb480db4cc349f1f6e636342910057b629a183389168f4b280e36
+DIST db-5.2.36.tar.gz 34664337 RMD160 6e5746424489ee27d8ca9fcc13511d006c93266b SHA1 1a7997e5bcdf504a439f90d9eaed63864806ed5f SHA256 8828f884cb5d1ecb0c52a18366c8845dce99d804d8b72b6e66f6e553f3d8d984
 DIST db.1.85.tar.gz 270953 RMD160 594253b7e80323cddc92cd7c89934217d403f58b SHA1 ccb057b07761d1b2b34626e748c7392c749d5e6d SHA256 4220d4ddeb77fb57ba2f37c1aa105d561d3ef85a6fb89c79c3edd735d0e193c6
 DIST patch.3.2.9.1 2139 RMD160 a018e1e91102c972279ec017e1d87d6d87f99a56 SHA1 34108ae9ce03c40c4d1016e9e54690d5d8fc4135 SHA256 6d89a42ee0be9e47b3e8a42981c65266a556de84bc6281edcf0f977f52547798
 DIST patch.3.2.9.2 495 RMD160 c9982844d99e1c78efddcb7b7615c41f6225e6b9 SHA1 c447c089f44c401c174244a7f9f7967522ba92a4 SHA256 61db874796fe8789b0045f456285b27c5b8b7b8902a5e342a115456015716d0e
@@ -85,12 +86,13 @@ EBUILD db-5.0.32.ebuild 6577 RMD160 1ec69cd62e02884dfcdc471c157c37ea24dc12ad SHA
 EBUILD db-5.1.19-r2.ebuild 6584 RMD160 72c3011a0819fe03529ccd43a38c8682c399ec55 SHA1 f050007cef681273dcd6ed43130bdc65e3411872 SHA256 57c4f98ef72d0117d2c738e9073622a610444b8a15b4f5b5462d08ed476b0385
 EBUILD db-5.1.25.ebuild 6581 RMD160 f282ca5d9e993e0afce2874c66392c7310e9f960 SHA1 5079b25de929d93cb284067b41a9113ff18a41ca SHA256 d6f9dad5f0a4ac20e1f25d78447de7c1fe537c23d205c8f902255110b4e39394
 EBUILD db-5.2.28.ebuild 7208 RMD160 3ec10bc699f1a56af140b807171c61dfb388048f SHA1 494801b2d0a1444918c9068420e83e48374d6f53 SHA256 b0f7fa95c363ffa2fa9d31317379407ced39111aa4a058737428538c2e134888
-MISC ChangeLog 50058 RMD160 bd4a843205c85c50a2a3c3e660758defab46eb38 SHA1 46b970032a26e31d32cbf71918c41edd9a31ad95 SHA256 421d782b0ed7ea87ced784291f6d8a1068e9d7c16006e6c62da5e82b5fc4f647
+EBUILD db-5.2.36.ebuild 7252 RMD160 e7937b934d98fca309e8beb4a134e390fa223b01 SHA1 d87c046963478ea65ca0586c3d9915ac0f5071a7 SHA256 14cd0e214f385d51e6342a85045c8949c06e963186cd399951db28294c31bfc1
+MISC ChangeLog 50173 RMD160 216c5da60149cc1d4633a8f2c03d5f885f24f56f SHA1 076107aed80969a711edef09e8bcbbdfc9d46e94 SHA256 63cbb7d48be13acc8d6a305f7e41c86c97b2eec69757c1c26357e518074e3cac
 MISC metadata.xml 1463 RMD160 8e4cb5bc76931b83b9b1e8d4cbe719224fda40f3 SHA1 0120fead11c4452b41738edb1456cfa1edc31a05 SHA256 c6d35d6a2053996f868d12532f33d943e28c9ee27df5b61c83c2836f77cdb34c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (Darwin)
+Version: GnuPG v2.0.18 (SunOS)
 
-iEYEARECAAYFAk6KCEQACgkQX3X2B8XHTomCKgCgn6mfiYzOd65mmHqc3ljjcDe/
-ArgAn31SO+0Z996KnsAkl9GP8dbDciA0
-=eV3Z
+iEYEARECAAYFAk6z1EgACgkQX3X2B8XHTongewCgjwiA9EoKMYobtfkvW/76PdxE
+mLMAoI87Q3+ycKdcSfJBivAEtp0u6gAN
+=/400
 -----END PGP SIGNATURE-----
