@@ -1,6 +1,11 @@
 # ChangeLog for sys-libs/db
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/db/ChangeLog,v 1.320 2011/07/16 19:43:16 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/db/ChangeLog,v 1.321 2011/11/01 07:35:52 robbat2 Exp $
+
+*db-5.2.36 (01 Nov 2011)
+
+  01 Nov 2011; Robin H. Johnson <robbat2@gentoo.org> +db-5.2.36.ebuild:
+  Version bump.
 
 *db-5.2.28 (16 Jul 2011)
 
